minor spacing fix

--- a/src/sass/messageView.scss
+++ b/src/sass/messageView.scss
@@ -81,7 +81,7 @@
                     line-height: 40px;
                     .history {
                         float: left;
-                        margin: 0;
+                        margin: 0 .5rem 0 0;
                         display: inline-block;
                         height: 40px;
                         line-height: 40px;
